--- a/team_jg_entertainment/src/main/resources/templates/index.html
+++ b/team_jg_entertainment/src/main/resources/templates/index.html
@@ -17,52 +17,57 @@
           background-attachment: fixed;
           background-size: cover;
 }
-       h2 {
+       h1 {
           color: white;
           text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkBlue;
 }
-       ul {
-          list-style-type: none;
-          margin: auto;
-          padding: 0;
-          width: 30%;
-          background-color: none;
-          border: -2px solid #555;
+       .button {
+          border-radius: 4px;
+          background-color: #f4511e;
+          border: none;
+          color: #FFFFFF;
+          text-align: center;
+          font-size: 28px;
+          padding: 20px;
+          width: 200px;
+          transition: all 0.5s;
+          cursor: pointer;
+          margin: 1px;
 }
-       li a {
-           display: block;
-           color: #000;
-           padding: 10px 16px;
-           text-decoration: none;
+      .button span {
+          cursor: pointer;
+          display: inline-block;
+          position: relative;
+          transition: 0.5s;
 }
-       li {
-           text-align: center;
-           border-bottom: -3px solid #555;
+      .button span:after {
+         content: '\00bb';
+         position: absolute;
+         opacity: 0;
+         top: 0;
+         right: -20px;
+         transition: 0.5s;
 }
-       li:last-child {
-           border-bottom: none;
+     .button:hover span {
+         padding-right: 25px;
 }
-       li a.active {
-           background-color: #04AA6D;
-           color: white;
-}
-       li a:hover:not(.active) {
-           background-color: #555;
-           color: white;
+     .button:hover span:after {
+         opacity: 1;
+         right: 0;
 }
 </style>
 
 <body>
 
-<h2>Restaurant MAIN MENU:</h2>
+<h1>Restaurant MAIN MENU:</h1>
 <ul>
-    <li><a href="/userMenu"><button class="/" style="color: dark;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">User
+    <li><a href="/userMenu"><button class="button" style="color: dark; text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">User
     </button></a> <br></li>
-    <li><a href="/tableMenu"><button class="/" style="color: dark; text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">Table
+    <li><a href="/tableMenu"><button class="button" style="color: dark; text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">Table
     </button></a> <br></li>
-    <li><a href="/menuMenu"><button class="/" style="color: dark;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">Menu
+    <li><a href="/menuMenu"><button class="button" style="color: dark;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">Menu
     </button></a> <br></li>
-    <li><a href="/reservationMenu"><button class="/" style="color: dark; text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px darkBlue;text-align:center;font-size:17px;width:20%;">Reservation
+    <li><a href="/reservationMenu"><button class="button" style="color: dark; text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px darkBlue;text-align:center;font-size:17px;width:20%;">Reservation
     </button></a> <br></li>
 </ul>
 </body>
