--- a/team_jg_entertainment/src/main/resources/templates/menu/addMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/addMenu.html
@@ -19,25 +19,30 @@
      h2 {
         color: MediumVioletRed;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+        width:750px;
+        text-align:center;
+        text-indent:200px;
 }
 </style>
 
 <body>
 
-<h2>Add Menu to the list</h2>
+<h2><big>Add MENU to the list</big></h2>
 
 <table>
     <tr>
-        <td>Title of the menu:</td>
-        <td>Description:</td>
-        <td>Price per table:</td>
+        <td><big>Title of the menu:</big></td>
+        <td><big>Description:</big></td>
+        <td><big>Price per table:</big></td>
     </tr>
-
     <tr>
         <form action="/addMenu" th:object="${request}" method="post">
-            <td><input type="text" th:field="${request.Title}"/></td>
-            <td><input type="text" th:field="${request.Description}"/></td>
-            <td><input type="text" th:field="${request.Price}"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.Title}"
+                       style="height:25px;width:250px"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.Description}"
+                       style="height:25px;width:250px"/></td>
+            <td><input type="text" th:field="${request.Price}"
+                       style="height:25px;width:250px"/></td>
             <td>
                 <input type="submit" value="Add Menu" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
                 <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
@@ -57,16 +62,15 @@
     <tr th:text="${message}"></tr>
 </td>
 
-
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
-
 <form action="/menuMenu" method="get">
     <input type="submit" value="Return to the actions with menus" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
 
 </body>
+
 </html>
