--- a/team_jg_entertainment/src/main/resources/templates/menu/deleteMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/deleteMenu.html
@@ -24,16 +24,16 @@
 
 <body>
 
-<h2>Delete menu from the list</h2>
-
+<h2><big>Delete menu from the list</big></h2>
 <table>
     <tr>
-        <td>Menu ID:</td>
+        <td><big>Menu ID:</big></td>
     </tr>
 
     <tr>
         <form action="/deleteMenu" th:object="${request}" method="post">
-            <td><input type="text" th:field="${request.menuNumberToRemove}"/></td>
+            <td><input type="text" placeholder="Enter ID..." th:field="${request.menuNumberToRemove}"
+                       style="height:25px;width:250px"/></td>
             <td>
                 <input type="submit" value="Delete Menu" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
                 <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
@@ -56,12 +56,11 @@
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
-
 <form action="/menuMenu" method="get">
     <input type="submit" value="Return to the actions with menus" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
 
 </body>
