--- a/team_jg_entertainment/src/main/resources/templates/menu/showAllMenus.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/showAllMenus.html
@@ -16,8 +16,11 @@
          background-size: cover;
 }
     h2 {
+        text-align: center;
+        text-transform: uppercase;
         color: MediumVioletRed;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
 }
     #menus {
         font-family: Arial, Helvetica, sans-serif;
@@ -41,11 +44,11 @@
         background-color: rgba(255,0,255,0.3);
         color: white;
 }
-
 </style>
 
 <body>
-<h2>Show all menus available</h2>
+
+<h2><big>Show all menus available</big></h2>
 <table id="menus">
     <tr>
         <th>ID </th>
@@ -66,14 +69,14 @@
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
-
 <form action="/menuMenu" method="get">
     <input type="submit" value="Return to the actions with menus" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
 
 </body>
+
 </html>
 
