--- a/team_jg_entertainment/src/main/resources/templates/reservation/deleteReservation.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/deleteReservation.html
@@ -24,16 +24,16 @@
 
 <body>
 
-<h2>Delete reservation from the list</h2>
+<h2><big>Delete reservation from the list</big></h2>
 
 <table>
     <tr>
-        <td>Reservation ID:</td>
+        <td><big>Reservation ID:</big></td>
     </tr>
-
     <tr>
         <form action="/deleteReservation" th:object="${request}" method="post">
-            <td><input type="text" th:field="${request.id}"/></td>
+            <td><input type="text" placeholder="Enter ID..." th:field="${request.id}"
+                       style="height:25px;width:250px"/></td>
             <td>
                 <input type="submit" value="Delete Reservation" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
                 <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
@@ -56,13 +56,13 @@
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
-
 <form action="/reservationMenu" method="get">
     <input type="submit" value="Return to reservation menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
 
 </body>
+
 </html>
