--- a/team_jg_entertainment/src/main/resources/templates/reservation/editReservation.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/editReservation.html
@@ -18,24 +18,31 @@
      h2 {
          color: MediumVioletRed;
          text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+         width:750px;
+         text-align:center;
+         text-indent:200px;
+
 }
 </style>
 <body>
 
-<h2>Edit reservation </h2>
+<h2><big>Edit reservation</big></h2>
 
 <table>
     <tr>
-        <td>Reservation ID:</td>
-        <td>Choose field to change:</td>
-        <td>Add new information:</td>
+        <td><big>Reservation ID:</big></td>
+        <td><big>Choose field to change:ID_VISITOR or ID_MENU or ID_TABLE:</big></td>
+        <td><big>Add new information:</big></td>
     </tr>
 
     <tr>
         <form action="/editReservation" th:object="${request}" method="post">
-            <td><input type="text" th:field="${request.reservationId}"/></td>
-            <td><input type="text" th:field="${request.enumEditReservation}"/></td>
-            <td><input type="text" th:field="${request.changes}"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.reservationId}"
+                       style="height:25px;width:250px"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.enumEditReservation}"
+                       style="height:25px;width:550px"/></td>
+            <td><input type="text" placeholder="Enter new info...." th:field="${request.changes}"
+                       style="height:25px;width:250px"/></td>
             <td>
                 <input type="submit" value="Edit Reservation" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
                 <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
@@ -58,14 +65,15 @@
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
-
 <form action="/reservationMenu" method="get">
     <input type="submit" value="Return to reservation menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
 
 </body>
 
 </html>
+style="height:25px;width:250px"
+"height:25px;width:550px"
