--- a/team_jg_entertainment/src/main/resources/templates/reservation/searchReservation.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/searchReservation.html
@@ -21,36 +21,50 @@
         color: MediumVioletRed;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+    th, td {
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+}
 </style>
 
 <body>
-<h2>Search reservation</h2>
+
+<h2><big>Search reservation</big></h2>
 
 <table>
 <tr>
-    <td>Reservation ID:</td>
+    <td><big>Reservation ID:</big></td>
 </tr>
-
 <tr>
     <form action="/searchReservation" th:object="${request}" method="post">
-        <td><input type="text" th:field="${request.reservationId}"/></td>
-
+        <td><input type="text" placeholder="Search....." th:field="${request.reservationId}"
+                   style="height:25px;width:250px"/></td>
         <td>
             <input type="submit" value="Search Reservation" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
             <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
         </td>
     </form>
 </tr>
-</table>
-<td th:if="${reservations != null}">
-    <tr th:each="reservation : ${reservations}">
-        <td th:text="${reservation.idReservation}"></td>
-        <td th:text="${reservation.user}"></td>
-        <td th:text="${reservation.menu}"></td>
-        <td th:text="${reservation.table}"></td>
-        <td th:text="${reservation.reservationDate}"></td>
+    <table style="width: 50%;">
+    <tr>
+        <td>ID reservation:</td>
+        <td>Info USER:</td>
+        <td>Info MENU:</td>
+        <td>Info TABLE:</td>
+        <td>DATE:</td>
     </tr>
-</td>
+    <td th:if="${reservations != null}">
+        <tr th:each="reservation : ${reservations}">
+            <td th:text="${reservation.idReservation}"></td>
+            <td th:text="${reservation.user}"></td>
+            <td th:text="${reservation.menu}"></td>
+            <td th:text="${reservation.table}"></td>
+            <td th:text="${reservation.reservationDate}"></td>
+        </tr>
+    </td>
+</table>
+</table>
 
 <td th:if="${errors != null}">
     <tr th:each="error : ${errors}">
@@ -61,13 +75,13 @@
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
-
 <form action="/reservationMenu" method="get">
     <input type="submit" value="Return to reservations' menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
 
 </body>
+
 </html>
