--- a/team_jg_entertainment/src/main/resources/templates/reservation/showAllReservations.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/showAllReservations.html
@@ -16,20 +16,22 @@
         background-size: cover;
 }
    h2 {
-      color: MediumVioletRed;
-      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+       text-align: center;
+       text-transform: uppercase;
+       color: MediumVioletRed;
+       text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
    #reservations {
-      font-family: Arial, Helvetica, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
+       font-family: Arial, Helvetica, sans-serif;
+       border-collapse: collapse;
+       width: 100%;
 }
    #reservations td, #reservations th {
-      border: 1px solid #ddd;
-      padding: 8px;
+       border: 1px solid #ddd;
+       padding: 8px;
 }
    #reservations tr:nth-child(even){
-      background-color: #f2f2f2;
+       background-color: #f2f2f2;
 }
    #reservations tr:hover {
        background-color: #ddd;
@@ -44,7 +46,8 @@
 </style>
 
 <body>
-<h2>Show all reservations available</h2>
+
+<h2><big>Show all reservations available</big></h2>
 <table id="reservations">
     <tr>
         <th>Reservation ID </th>
@@ -62,19 +65,17 @@
             <td th:text="${reservation.reservationDate}"></td>
             <td th:text="${reservation.table}"></td>
             <td th:text="${reservation.menu}"></td>
-
         </tr>
     </td>
 </table>
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
-
 <form action="/reservationMenu" method="get">
     <input type="submit" value="Return to the reservations' menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
 
 </body>
