--- a/team_jg_entertainment/src/main/resources/templates/table/deleteTable.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/deleteTable.html
@@ -24,16 +24,17 @@
 
 <body>
 
-<h2>Delete table from the list</h2>
+<h2><big>Delete table from the list</big></h2>
 
 <table>
   <tr>
-    <td>Table ID:</td>
+    <td><big>Table ID:</big></td>
   </tr>
 
   <tr>
     <form action="/deleteTable" th:object="${request}" method="post">
-      <td><input type="text" th:field="${request.tableIdToRemove}"/></td>
+      <td><input type="text" placeholder="Enter ID..." th:field="${request.tableIdToRemove}"
+                 style="height:25px;width:250px"/></td>
       <td>
         <input type="submit" value="Delete Table" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
         <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
@@ -53,16 +54,15 @@
   <tr th:text="${message}"></tr>
 </td>
 
-
 <form action="/" method="get">
   <input type="submit" value="Main menu" name="Submit"
-         style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+         style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
-
 <form action="/tableMenu" method="get">
   <input type="submit" value="Return to tables' menu" name="Submit"
-         style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+         style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
 
 </body>
+
 </html>
