--- a/team_jg_entertainment/src/main/resources/templates/table/showAllTables.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/showAllTables.html
@@ -16,6 +16,8 @@
            background-size: cover;
 }
        h2 {
+           text-align: center;
+           text-transform: uppercase;
            color: MediumVioletRed;
            text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
@@ -45,7 +47,7 @@
 
 <body>
 
-<h2>Show all tables</h2>
+<h2><big>Show all tables</big></h2>
 <table id="tables">
 <tr>
     <th>ID of the table</th>
@@ -66,13 +68,13 @@
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
-
 <form action="/tableMenu" method="get">
     <input type="submit" value="Return to tables' menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
 
 </body>
+
 </html>
