--- a/team_jg_entertainment/src/main/resources/templates/user/addUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/addUser.html
@@ -19,24 +19,29 @@
       h2 {
           color: MediumVioletRed;
           text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+          width:750px;
+          text-align:center;
+          text-indent:200px;
 }
 </style>
 
 <body>
 
-<h2>Add User</h2>
+<h2><big>Add USER to the list</big></h2>
 <table>
     <tr>
-        <td>Name:</td>
-        <td>Surname:</td>
-        <td>Telephone:</td>
+        <td><big>Name:</big></td>
+        <td><big>Surname:</big></td>
+        <td><big>Telephone:</big></td>
     </tr>
-
     <tr>
         <form action="/addUser" th:object="${request}" method="post">
-            <td><input type="text" th:field="${request.name}"/></td>
-            <td><input type="text" th:field="${request.surname}"/></td>
-            <td><input type="text" th:field="${request.telephone}"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.name}"
+                       style="height:25px;width:250px"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.surname}"
+                       style="height:25px;width:250px"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.telephone}"
+                       style="height:25px;width:250px"/></td>
             <td>
                 <input type="submit" value="Add User" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
                 <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
@@ -59,13 +64,13 @@
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
-
 <form action="/userMenu" method="get">
     <input type="submit" value="Return to users' menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
 
 </body>
+
 </html>
