--- a/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
@@ -20,37 +20,54 @@
         color: MediumVioletRed;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+    p {
+        font-family: "Trebuchet MS", Verdana, sans-serif;
+        list-style-position: left;
+}
+    th, td {
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+}
 </style>
 
 <body>
-<h2>Search user</h2>
+
+<h2><big>Search user</big></h2>
 
 <table>
     <tr>
-        <td>User Name:</td>
-        <td>User Surname:</td>
+        <td><big>Name:</big></td>
+        <td><big>Surname:</big></td>
     </tr>
-
     <tr>
         <form action="/searchUser" th:object="${request}" method="post">
-            <td><input type="text" th:field="${request.userName}"/></td>
-            <td><input type="text" th:field="${request.usersSurname}"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.userName}"
+                       style="height:25px;width:250px"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.usersSurname}"
+                       style="height:25px;width:250px"/></td>
             <td>
                 <input type="submit" value="Search User" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
                 <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
             </td>
         </form>
     </tr>
-</table>
-
+    <tr>
+        <td>ID user:</td>
+        <td>Name:</td>
+        <td>Surname:</td>
+        <td>Telephone:</td>
+    </tr>
     <td th:if="${visitors != null}">
         <tr th:each="visitor : ${visitors}">
-            <td th:text="${visitor.userName}"></td>
-            <td th:text="${visitor.surname}"></td>
-            <td th:text="${visitor.userId}"></td>
-            <td th:text="${visitor.telephoneNumber}"></td>
+            <p><td th:text="${visitor.userId}"></td>
+            <p></p><td th:text="${visitor.userName}"></td>
+            <p><td th:text="${visitor.surname}"></td>
+            <p><td th:text="${visitor.telephoneNumber}"></td>
         </tr>
     </td>
+
+</table>
 
 <td th:if="${errors != null}">
     <tr th:each="error : ${errors}">
@@ -61,12 +78,11 @@
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
-
 <form action="/userMenu" method="get">
     <input type="submit" value="Return to users' menu" name="Submit"
-           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+           style="margin: 5px; top: 50px; left: 50px; color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:20px;" />
 </form>
 
 </body>
