--- a/team_jg_entertainment/src/main/resources/templates/user/showUsers.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/showUsers.html
@@ -46,7 +46,7 @@
 </style>
 
 <body>
-<h2><big>Show Users</big></h2>
+<h2><big>Show all users</big></h2>
 <table id="users">
     <tr>
         <th>ID</th>
