--- a/team_jg_entertainment/src/main/resources/templates/userMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/userMenu.html
@@ -25,10 +25,11 @@
 
 <h1>User menu:</h1>
 
-<h3><a href="/addUser"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Add User</button></a></h3>
-<h3><a href="/deleteUser"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Delete User</button></a></h3>
-<h3><a href="/showUsers"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Show Users</button></a></h3>
-<h3><a href="/searchUser"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Search User</button></a></h3>
+<h3><a href="/addUser"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">ADD new user</button></a></h3>
+<h3><a href="/deleteUser"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">DELETE user from List</button></a></h3>
+<h3><a href="/showUsers"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">SHOW all users</button></a></h3>
+<h3><a href="/searchUser"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">SEARCH user</button></a></h3>
+<h3><a href="/updateUser"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">UPDATE user</button></a></h3>
 
 <form action="/" method="get">
     <input type="submit" style="color:Blue;text-align:center;font-size:17px;" value="Main menu" name="Submit" />
