--- a/team_jg_entertainment/src/main/resources/templates/menu/addMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/addMenu.html
@@ -37,12 +37,9 @@
     </tr>
     <tr>
         <form action="/addMenu" th:object="${request}" method="post">
-            <td><input type="text" placeholder="Enter....." th:field="${request.Title}"
-                       style="height:25px;width:250px"/></td>
-            <td><input type="text" placeholder="Enter....." th:field="${request.Description}"
-                       style="height:25px;width:250px"/></td>
-            <td><input type="text" th:field="${request.Price}"
-                       style="height:25px;width:250px"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.Title}" style="height:25px;width:250px"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.Description}" style="height:25px;width:250px"/></td>
+            <td><input type="text" th:field="${request.Price}" style="height:25px;width:250px"/></td>
             <td>
                 <input type="submit" value="Add Menu" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
                 <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
