--- a/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
@@ -27,7 +27,7 @@
 
 <h3><a href="/addReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Add new reservation</button></a></h3>
 <h3><a href="/deleteReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Delete reservation</button></a></h3>
-<h3><a href="/editReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Edit information to the reservation</button></a></h3>
+<h3><a href="/updateReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Update information to the reservation</button></a></h3>
 <h3><a href="/showAllReservations"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Show a list of all reservations</button></a></h3>
 <h3><a href="/searchReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Search reservation in list</button></a></h3>
 
