--- a/team_jg_entertainment/src/main/resources/templates/tableMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/tableMenu.html
@@ -26,23 +26,16 @@
 
 <h1>Table menu:</h1>
 
-<h3><a href="/addTable">
-    <button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Add Table</button>
-</a></h3>
-<h3><a href="/deleteTable">
-    <button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Delete Table</button>
-</a></h3>
-<h3><a href="/searchTable">
-    <button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Search Table</button>
-</a></h3>
-<h3><a href="/showAllTables">
-    <button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Show All Tables</button>
-</a></h3>
-
+<h3><a href="/addTable"> <button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Add Table</button></a></h3>
+<h3><a href="/deleteTable"> <button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Delete Table</button></a></h3>
+<h3><a href="/searchTable"> <button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Search Table</button></a></h3>
+<h3><a href="/showAllTables"> <button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Show All Tables</button></a></h3>
+<h3><a href="/updateTable"> <button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Update Table</button></a></h3>
 
 <form action="/" method="get">
     <input type="submit" style="color:Blue;text-align:center;font-size:17px;" value="Main menu" name="Submit"/>
 </form>
 
 </body>
+
 </html>
