--- a/team_jg_entertainment/src/main/resources/templates/user/deleteUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/deleteUser.html
@@ -26,15 +26,13 @@
 <h2><big>Delete USER from the list</big></h2>
 <table>
     <tr>
-        <td><big>ID:</big></td>
+        <td><big>ID user:</big></td>
         <td><big>Name:</big></td>
     </tr>
     <tr>
         <form action="/deleteUser" th:object="${request}" method="post">
-            <td><input type="text" placeholder="Enter ID..." th:field="${request.userId}"
-                       style="height:25px;width:250px"/></td>
-            <td><input type="text" placeholder="Enter Name..." th:field="${request.userName}"
-                       style="height:25px;width:250px"/></td>
+            <td><input type="text" placeholder="Enter ID..." th:field="${request.userId}" style="height:25px;width:250px"/></td>
+            <td><input type="text" placeholder="Enter Name..." th:field="${request.userName}" style="height:25px;width:250px"/></td>
             <td>
                 <input type="submit" value="Delete User" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
                 <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
