--- a/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
@@ -42,10 +42,8 @@
     </tr>
     <tr>
         <form action="/searchUser" th:object="${request}" method="post">
-            <td><input type="text" placeholder="Enter....." th:field="${request.userName}"
-                       style="height:25px;width:250px"/></td>
-            <td><input type="text" placeholder="Enter....." th:field="${request.usersSurname}"
-                       style="height:25px;width:250px"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.userName}" style="height:25px;width:250px"/></td>
+            <td><input type="text" placeholder="Enter....." th:field="${request.usersSurname}" style="height:25px;width:250px"/></td>
             <td>
                 <input type="submit" value="Search User" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
                 <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
