Added css to prescription

--- a/team_hospital/src/main/resources/templates/prescription/deletePrescription.html
+++ b/team_hospital/src/main/resources/templates/prescription/deletePrescription.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Hospital demo project">
     <meta name="author" content="JavaGuru">
     <title>Hospital Repository</title>
+    <link href="/static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet"/>
 </head>
 
 <body>
