--- a/team_hospital/src/main/resources/templates/prescription/searchPrescription.html
+++ b/team_hospital/src/main/resources/templates/prescription/searchPrescription.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Hospital demo project">
     <meta name="author" content="JavaGuru">
     <title>Hospital repository</title>
+    <link href="/static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet"/>
 </head>
 <body>
 <h3>Search prescription</h3>
